# webdvd

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: e2e.yml  pages.yml  test.yml
deploy/: Caddyfile  README.md  deploy.sh  setup-vps.sh  webdvd.env.example  webdvd.service
game/: README.md  game.js  index.html  style.css
player/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
player/e2e/: disc-structure.spec.ts
player/src/: dvdnav.ts  ifo-parser.test.ts  ifo-parser.ts  main.ts  mp4-codec.test.ts  mp4-codec.ts  mse.ts  overlay.ts  session.test.ts  session.ts  spu-decode.test.ts  spu-decode.ts  spu-demux.test.ts  spu-demux.ts  style.css
scripts/: make-menu-test-disc.sh  make-test-disc.sh
server/: Cargo.toml  build.rs
server/src/: api.rs  auth.rs  cache.rs  disc.rs  dvdread.rs  library.rs  main.rs  transcode.rs
wasm/: build.sh  test-menu.mjs  test.mjs  validate-build.mjs
wasm/src/: config.h  dvd_input.c  glue.c
wasm/src/dvdnav/: version.h
wasm/src/dvdread/: dvd_filesystem.h  version.h
